--- a/style.css
+++ b/style.css
@@ -116,3 +116,53 @@
     flex-direction: column;
     gap: 20px;
 }
+
+@media only screen and (min-width: 720px) {
+    .top-container {
+        height: 500px;
+    }
+
+    .first-heading {
+        width: 250px;
+        font-size: 30px;
+    }
+
+    .intro-text {
+        width: 500px;
+        font-size: 20px;
+        line-height: 25px;
+    }
+
+    .mid-container {
+        height: 500px;
+    }
+
+    .mid-header {
+        font-size: 25px;
+        padding-top: 40px;
+    }
+
+    .activities {
+        display: flex;
+        flex-direction: row;
+        margin-top: 50px;
+        gap: 100px;
+    }
+
+    .all-activities {
+        width: 280px;
+        height: 250px;
+    }
+
+    .activities-img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .welcome-p {
+        font-size: 18px;
+        margin-top: 10px;
+    }
+
+    
+}
